<resources>
    <string name="app_name">yep</string>

    <string name="title_section1">Bandeja de entrada</string>
    <string name="title_section2">Amigos</string>
    <string-array name="camera_choices">
        <item>Haz una foto</item>
        <item>Haz un video</item>
        <item>Elige una foto</item>
        <item>Elige un video</item>
    </string-array>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_usuario">Nombre de usuario</string>
    <string name="nombre_contrasena">Contraseña</string>
    <string name="texto_registro">Registrate</string>
    <string name="boton_ingresar">Ingresar</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hint_email">Email</string>
    <string name="boton_registro">Registrate</string>
    <string name="error_campo_nombre_vacio">Tienes que rellenar el campo usuario</string>
    <string name="error_campo_contrasena_vacio">Tienes que rellenar la contraseña</string>
    <string name="error_campo_email_vacio">Tienes que rellenar el email</string>
    <string name="error_campo_respuesta_seguridad_vacio">Tienes que contestar a la pregunta de seguridad</string>
    <string name="error_registrar_usuario">Error al registrar el usuario</string>
    <string name="error_loguear_usuario">Error al loguear el usuario</string>
    <string name="menu_desconectar">desconectar</string>
    <string name="mensaje_logueando">logueando</string>
    <string name="mensaje_cargando">cargando</string>
    <string name="mensaje_espera">Espere por favor</string>
    <string name="mensaje_bandeja_vacia">No hay mensajes</string>
    <string name="lista_amigos_vacia">No tiene amigos</string>
    <string name="action_edit_friends">Añadir amigos</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="mensaje_usuarios_vacios">No hay usuarios en el servidor</string>
    <string name="camera">camera</string>
    <string name="error_seleccionar_archivo">No se puede seleccionar el archivo</string>
    <string name="error_seleccionar_video">No se puede seleccionar el video</string>
    <string name="text_olvidar_password">¿Olvidaste la contrraseña?</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="pregunta_seguridad">¿Cómo se llama tu mascota de la infancia?</string>
    <string name="texto_boton_recuperar_password">Recuperar contraseña</string>
    <string name="hint_pregunta_seguridad">Pregunta de seguridad</string>
    <string name="hint_respuesta_seguridad">Respuesta de seguridad</string>
    <string name="title_activity_recipients">RecipientsActivity</string>
    <string name="error_fichero_muy_grande">El fichero es muy grande, selecciona otro mas pequeño</string>
    <string name="title_activity_recipients_activity_with_fragment">RecipientsActivityWithFragment
    </string>


</resources>
